<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.weatherapp.zoe.weatherapp.Activity.SettingsActivity">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/set"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/daysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/settingsText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/days"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/settingsText"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/daysText"></Spinner>

    <TextView
        android:id="@+id/gText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/daysText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/g"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Switch
        android:id="@+id/gpsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daysText"
        android:gravity="center_vertical"
        android:layout_margin="1dp"
        android:switchMinWidth="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/gText"
        android:showText="true"
        android:switchTextAppearance="@style/MySwitch"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        android:textStyle="bold"
        android:thumb="@drawable/background"
        android:thumbTextPadding="5dp"
        />

    <TextView
        android:id="@+id/zipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/zipcode"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputZipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zipText"
        android:layout_alignParentRight="true"
        android:layout_below="@id/gText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:hint="22202"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColorHint="#95A1AA"
        android:textScaleX="1.5"
        android:textSize="10sp"
        android:textStyle="normal"
        />

    <TextView
        android:id="@+id/unitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/zipText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/unit"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/unitText"
        android:layout_below="@+id/inputZipText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:switchMinWidth="40dp"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:showText="true"
        android:switchTextAppearance="@style/MySwitch"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textStyle="bold"
        android:thumb="@drawable/background"
        android:thumbTextPadding="5dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@string/con"
        android:text="@string/con"
        android:layout_below="@+id/unitText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
